# character-recognizer

./: .gitignore  readme.md
character-recognizer/: CMakeLists.txt  command_interpreter.cpp  command_interpreter.h  main.cpp  neural_matrix.cpp  neural_matrix.h  profiler.h  request_handler.cpp  request_handler.h  snn.cpp  snn.h  state_saver.cpp  state_saver.h  training.cpp  training.h  training_database.cpp  training_database.h
character-recognizer/ImgLib/: CMakeLists.txt  bmp_image.cpp
